--- a/style.css
+++ b/style.css
@@ -3,11 +3,13 @@
     width: 100%;
     margin: 0px;
     box-shadow: 5px 5px 5px grey;
+    background-color: rgb(140, 107, 95);
+    color: whitesmoke;
 }
 
 .note{
     font-size: 15px;
-    color: black;
+    color: whitesmoke;
 }
 
 .copyrightfooter{
