--- a/style.css
+++ b/style.css
@@ -18,7 +18,13 @@
     width: 100%;
     text-align: center;
     line-height: 3;
-    background-color: grey;
+    background-color: rgb(120, 90, 90);
     color: white;
     font-size: 20px;
+}
+
+canvas{
+    border: 5px solid white;
+    border-radius: 20px;
+    box-shadow: 5px 5px 5px grey;
 }
